build endpoint for vhost management
