# src/packages/rabbitmq/virtualhost/types.go
@@ -1,0 +1,1 @@
+package virtualhost
