# src/services/inventory/docs/swagger.json
@@ -522,6 +522,77 @@
                     }
                 }
             }
+        },
+        "/{clusterId}/virtualhost": {
+            "get": {
+                "description": "Retrieve all virtual hosts from cluster and database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "VirtualHost"
+                ],
+                "summary": "Retrieve all virtual hosts from cluster and database",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Cluster id from where retrieve virtualhost",
+                        "name": "clusterId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "post": {
+                "description": "Import or Create a new VirtualHost",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "VirtualHost"
+                ],
+                "summary": "Import or Create a new VirtualHost",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Cluster id from where retrieve virtualhost",
+                        "name": "clusterId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "201": {
+                        "description": "Created"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -581,6 +652,9 @@
             "type": "object",
             "properties": {
                 "QueueName": {
+                    "type": "string"
+                },
+                "Type": {
                     "type": "string"
                 }
             }
