# src/services/inventory/virtualhost/entities/VirtualHost.go
@@ -1,0 +1,4 @@
+package entities
+
+type VirtualHost struct {
+}
